--- a/gv-viewer/styles/main.css
+++ b/gv-viewer/styles/main.css
@@ -1,3 +1,11 @@
 #main_container{
   margin-top:80px;
 }
+
+#twitter_account{
+  position:absolute;
+  top:100px;
+}
+#twitter_account .hero-unit{
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5), 0 -1px 0 rgba(0, 0, 0, 0.25) inset;
+}
