--- a/gv-viewer/styles/main.css
+++ b/gv-viewer/styles/main.css
@@ -2,10 +2,10 @@
   margin-top:80px;
 }
 
-#twitter_account{
+#twitter_account,#post{
   position:absolute;
   top:100px;
 }
-#twitter_account .hero-unit{
+#twitter_account .hero-unit, #post .hero-unit{
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5), 0 -1px 0 rgba(0, 0, 0, 0.25) inset;
 }
