--- a/gv-viewer/styles/main.css
+++ b/gv-viewer/styles/main.css
@@ -9,3 +9,7 @@
 #twitter_account .hero-unit, #post .hero-unit{
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5), 0 -1px 0 rgba(0, 0, 0, 0.25) inset;
 }
+
+#category_timeseries{
+  height:400px;
+}
