--- a/gv-viewer/styles/main.css
+++ b/gv-viewer/styles/main.css
@@ -37,3 +37,17 @@ a.label{
 .post_title{
   font-size:80%;
 }
+
+#category_stats div{
+  margin:15px;
+}
+
+.category_label{
+  font-size:42px;
+  color:#999;
+}
+
+.category_value{
+  font-size:42px;
+  font-weight:bold;
+}
